Flex Box Ejercicio 1 pas 2
a partir del ejercicio 1 hemos añadido la media query para max 800px

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,5 +75,19 @@
 }
     .pie{
         background: #fed049;
-        width: 300px;
+        width: 90%;
     }
+    @media all and (max-width: 800px){
+
+        .section{
+        flex-direction: column;
+        
+        }
+              .aside{
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            
+        }
+    }
+    
