--- a/styles/styles.css
+++ b/styles/styles.css
@@ -75,19 +75,38 @@
 }
     .pie{
         background: #fed049;
-        width: 90%;
+        width: 300px;
     }
     @media all and (max-width: 800px){
 
         .section{
         flex-direction: column;
-        
         }
-              .aside{
+        
+        .aside{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+        }
+    }
+    @media all and (max-width: 600px){
+        .articulos{
+            flex-direction: column;
+        }
+        .aside{
             display: flex;
             flex-direction: column;
             justify-content: center;
             
         }
     }
+    @media all and (max-width: 400px){
+        .menu{
+            height: auto;
+            flex-direction: column;
+            justify-content: center;
+            align-items:stretch;
+            
+        }
     
+    }
